<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.delaroystudios.hydrationapp.MainActivity">

    <TextView
        android:id="@+id/tv_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/instructions" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/fl_water_increment"
        android:layout_weight="1">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ib_water_increment"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/water_increment_content_desc"
            android:onClick="incrementWater"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_local_drink_grey_120px"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="64"
                android:visibility="invisible" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_water_count"
                android:layout_gravity="center"
                android:text="@string/default_water_count"
                android:textColor="#424242"
                android:textSize="35sp"/>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="36"
                android:visibility="invisible" />

        </LinearLayout>

    </FrameLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fl_charge_increment">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iv_power_increment"
            android:contentDescription="@string/charging_plug_content_desc"
            android:src="@drawable/ic_power_grey_80px"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_charging_reminder_count"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@+id/iv_power_increment"
            android:layout_toRightOf="@+id/iv_power_increment"
            android:text="@string/default_charge_notification_count"/>

    </RelativeLayout>
</LinearLayout>
